--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,8 +1,8 @@
 <% var data = {
-  title: "Заголовок | Проект",
+  title: "Заголовок | OXYGEN",
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 
-<div class="container">Первая страница.</div>
+<%= _.template(require('./../includes/hero.html').default)(data) %>
 
 <%= _.template(require('./../includes/footer.html').default)(data) %>
