--- a/src/scss/includes/base/vars.scss
+++ b/src/scss/includes/base/vars.scss
@@ -6,6 +6,8 @@ $font-MessinaSansMono: 'MessinaSansMono', sans-serif;
 // Colors
 $color-black: #1A1A1A;
 $color-red: #F2571F;
+$color-green: #373A39;
+$color-yellow: #FCBB08;
 
 // Media queries
 $desktop-extra: 1200px;
