--- a/src/scss/includes/base/vars.scss
+++ b/src/scss/includes/base/vars.scss
@@ -8,6 +8,7 @@ $color-black: #1A1A1A;
 $color-red: #F2571F;
 $color-green: #373A39;
 $color-yellow: #FCBB08;
+$color-white: #ffffff;
 
 // Media queries
 $desktop-extra: 1200px;
