--- a/src/scss/includes/base/vars.scss
+++ b/src/scss/includes/base/vars.scss
@@ -9,6 +9,8 @@ $color-red: #F2571F;
 $color-green: #373A39;
 $color-yellow: #FCBB08;
 $color-white: #ffffff;
+$color-light-grey: #F0F0F0;
+$color-black-green: #777777;
 
 // Media queries
 $desktop-extra: 1200px;
