--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,7 +9,7 @@
 // Blocks
 @import 'includes/blocks/hero.scss';
 
-
+@import 'includes/blocks/expertise.scss';
 // Templates
 // @import 'templates/*';
 
