--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,5 +4,6 @@
 <%= _.template(require('./../includes/header.html').default)(data) %>
 
 <%= _.template(require('./../includes/hero.html').default)(data) %>
+<%= _.template(require('./../includes/portfolio.html').default)(data) %>
 
 <%= _.template(require('./../includes/footer.html').default)(data) %>
