--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="logo logo--line">
         <a class="logo__link" href="#">
-          <img class="logo__img" src="../../img/Logo.png" alt="Logo Copy">
+          <img class="logo__img" src="../../favicon/Logo-oxigen.ico" alt="Logo Copy">
         </a>
       </div>
       <div class="footer__soicial">
